--- a/styles.css
+++ b/styles.css
@@ -56,3 +56,15 @@ p#sighting {
 a:visited {
     color: lightgreen;
 }
+
+/* Adding media link when shrinking page */
+
+@media screen and (max-width: 600px) {
+  body {
+    background-color: darkgreen;
+    width: 95%;
+  }
+  html p, ul {
+    color:white;
+    font-size:1.1em;
+  }
