--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,6 @@ main .species {
 h1 {
   font-family:Georgia;
   text-align:center;
-  display:relative;
   font-size:3em;
   color:#cc4400;
   text-shadow: 1px 1px 1px #111;
@@ -28,7 +27,7 @@ h2,h3 {
 
 blockquote {
   padding:10px;
-  border:10px
+  border:10px;
   font-family:Georgia;
   font-size:1.5em;
   color:white;
@@ -67,4 +66,4 @@ a:visited {
   html p, ul {
     color:white;
     font-size:1.1em;
-  }
+  }}
