--- a/styles.css
+++ b/styles.css
@@ -1,66 +1,34 @@
 /*This is a test*/
-body {background:green}
+body {
+
+  background: eggshell;
+
+}
 
 /* Using a class-cased styling scheme for names */
-main .species {
-  color:#003300;
+
+main {
+
+  display: flex;
+  justify-content: center;
+  padding-top: 25vh;
+
 }
 
-/* Adding bg image from directory and styling website main title */
-h1 {
-  font-family:Georgia;
-  text-align:center;
-  font-size:3em;
-  color:#cc4400;
-  text-shadow: 1px 1px 1px #111;
-  background-image:url('images/Picea_rubens_UGA5349098.jpg');
+#my-greeting {
+
+  font-size:5em;
+  /*display: none;*/
+
 }
 
-img {
-  margin:2%;
-  margin-left:10%;
-}
 
-h2,h3 {
-  color:maroon;
-}
-
-blockquote {
-  padding:10px;
-  border:10px;
-  font-family:Georgia;
-  font-size:1.5em;
-  color:white;
-  text-shadow: 1px 1px 1px #000;
-}
-
-body p,ul {
-  color:silver;
-}
-
-/* Centering the footer */
-footer p {
-  text-align:center;
-  font-weight:bold;
-  color:black;
-}
-
-/* Adding an ID-based styling */
-p#sighting {
-  color:purple;
-  font-size:1.5em;
-}
-
-/* Adding visited link */
-a:visited {
-    color: lightgreen;
-}
 
 /* Adding media link when shrinking page */
 
 @media screen and (max-width: 600px) {
   body {
-    background-color: darkgreen;
+    background-color: grey;
     width: 95%;
   }
   html p, ul {
