--- a/styles.css
+++ b/styles.css
@@ -11,33 +11,31 @@ main {
 
   display: flex;
   justify-content: center;
-  padding-top: 10vh;
 
+}
+
+td {
+
+    text-align: center;
 }
 
 #canvas {
 
   display: inline-block;
-  width: 60vh;
-  height: 60vh;
+  width: 70vh;
+  height: 70vh;
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  padding-right: 5vh;
+  padding-left: 5vh;
 
 }
-
-td {
-    text-align: center;
-}
-
 
 #center-box {
 
   display: inline-block;
   font-size:5em;
 
-}
-
-.fa {
-
-  color: lightGrey;
 }
 
 
@@ -48,41 +46,59 @@ td {
 
 }
 
+.fa {
+
+  color: lightGrey;
+
+}
 
 .fa.fa-chevron-up {
+
   display: flex;
   justify-content: center;
   font-size: 1em;
+
 }
 
 .fa.fa-chevron-down {
+
   display: flex;
   justify-content: center;
   font-size: 1em;
+
 }
 
 .fa.fa-chevron-left {
+
   float:left;
+  justify-content: center;
   font-size: 1em;
+
 }
 
 .fa.fa-chevron-right {
-  float:right;
-  display: inline-block;
-  vertical-align: middle;
-  position:relative;
+
+  display: flex;
+  justify-content: center;
   font-size: 1em;
+
 }
 
 
 /* Adding media link when shrinking page */
 
 @media screen and (max-width: 600px) {
+
   body {
+
     background-color: grey;
     width: 95%;
+
   }
+
   html p, ul {
-    color:white;
-    font-size:1.1em;
-  }}
+
+    color: white;
+    font-size: 1.1em;
+
+  }
