--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,11 @@ td {
 
   display: inline-block;
   width: 70vh;
-  height: 70vh;
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-  padding-right: 5vh;
-  padding-left: 5vh;
+  height: 50vh;
+  padding-top: 10vh;
+  padding-bottom: 10vh;
+  padding-right: 10vh;
+  padding-left: 10vh;
 
 }
 
@@ -48,7 +48,7 @@ td {
 
 .fa {
 
-  color: lightGrey;
+  color: #42f495;
 
 }
 
@@ -56,7 +56,7 @@ td {
 
   display: flex;
   justify-content: center;
-  font-size: 1em;
+  font-size: 5em;
 
 }
 
@@ -64,7 +64,7 @@ td {
 
   display: flex;
   justify-content: center;
-  font-size: 1em;
+  font-size: 5em;
 
 }
 
@@ -72,7 +72,7 @@ td {
 
   float:left;
   justify-content: center;
-  font-size: 1em;
+  font-size: 5em;
 
 }
 
@@ -80,7 +80,7 @@ td {
 
   display: flex;
   justify-content: center;
-  font-size: 1em;
+  font-size: 5em;
 
 }
 
