--- a/styles.css
+++ b/styles.css
@@ -28,9 +28,15 @@ td {
   padding-bottom: 10vh;
   padding-right: 10vh;
   padding-left: 10vh;
-  font-size: 1.5em;
+  font-size: 1.3em;
 
 }
+
+#my-water-map {
+  width: 65vh;
+  justify-content: center;
+}
+
 
 #center-box {
 
@@ -59,7 +65,7 @@ td {
 #lower-box p {
 
   text-align: left;
-  
+
 }
 
 
@@ -80,6 +86,7 @@ td {
 
 .fa.fa-chevron-down {
 
+
   display: flex;
   justify-content: center;
   font-size: 5em;
@@ -96,7 +103,7 @@ td {
 
 .fa.fa-chevron-right {
 
-  display: flex;
+  display: inline-block;;
   justify-content: center;
   font-size: 5em;
 
@@ -133,6 +140,10 @@ img#bottom {
     background-color: grey;
     width: 95%;
 
+  }
+
+  #canvas {
+    width: 50%;
   }
 
   html p {
