--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*This is a test*/
 body {
 
-  background: eggshell;
+  background: eggShell;
 
 }
 
@@ -29,20 +29,49 @@ td {
   padding-right: 10vh;
   padding-left: 10vh;
   font-size: 1.3em;
+  font-family: monospace;
 
 }
 
+a {
+  color: lightGreen;
+}
+
+a:visited {
+  color: purple;
+}
+
+
 #my-water-map {
+
   width: 65vh;
-  justify-content: center;
+
 }
 
 
 #center-box {
 
   display: inline-block;
-  font-size:2em;
+  font-size:3em;
 
+}
+
+body, html {
+    height: 100%;
+}
+
+.parallax {
+    /* The image used */
+    background-image: url("https://docs.google.com/drawings/d/1TXMksIfiaxbtiPkvCPQaEVWIDZIwUVgFTvascAluyZE/pub?w=1473&amp;h=1405");
+
+    /* Full height */
+    height: 100%;
+
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: repeat;
+    background-size: auto;
 }
 
 
@@ -53,12 +82,10 @@ td {
 
 }
 
-
-
-
 #left-box p {
 
-  text-align: left;
+  text-align: justify;
+text-justify: inter-word;
 
 }
 
@@ -68,6 +95,10 @@ td {
 
 }
 
+#right-box {
+
+  height: 50vh;
+}
 
 .fa {
 
