--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,11 @@ td {
 
   display: inline-block;
   width: 70vh;
-  height: 50vh;
-  padding-top: 10vh;
-  padding-bottom: 10vh;
-  padding-right: 10vh;
-  padding-left: 10vh;
+  /*height: 50vh;*/
+  padding-top: 5vh;
+  padding-bottom: 5vh;
+  padding-right: 5vh;
+  padding-left: 5vh;
   font-size: 1.3em;
   font-family: monospace;
 
