--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ body, html {
 
   display: inline-block;
   position: relative;
-  width: 300px;
+  width: auto;
   height: auto;
   background: #EEE;
   z-index: 0;
