Add links information

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -68,8 +68,8 @@ RATP green (dark): #008672
 }
 
 .material-icons {
-  font-size: 12em;
-  padding-bottom: 5%;
+  font-size: 11em;
+  padding-bottom: 4%;
 }
 
 /* Section-by-Section Stylings */
@@ -194,6 +194,33 @@ section .container {
     text-align: center;
     background: #00AA90;
 }
+
+#links i {
+  color: #1D3667;
+}
+
+#links ul {
+  text-align: left;
+  padding-left: 10%;
+}
+
+#links li {
+  padding-bottom: 2%;
+}
+
+/*.link-items {
+  display: block;
+  float: left;
+}*/
+
+/*.link img a {
+  width: 10%;
+}
+
+.link img {
+  width: 200px;
+  height: 200px;
+}*/
 
 #contact {
     height: 100%;
