Update margins and add more info in links

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -72,6 +72,11 @@ RATP green (dark): #008672
   padding-bottom: 4%;
 }
 
+.icon-link {
+  font-size: 1em;
+  padding: 0;
+}
+
 /* Section-by-Section Stylings */
 
 .intro-section {
@@ -130,16 +135,20 @@ RATP green (dark): #008672
 .story-section {
   height: 100%;
   /*padding-top: 10%;*/
+  margin-top: 0;
+  margin-bottom: 0;
   text-align: center;
   z-index: 2;
   background: #fff;
 }
 
 section .container {
+  height: 90%;
   background-color: rgba(238, 244, 245, 0.9);
-  padding-top: 5%;
+  padding-top: 4%;
   margin-top: 5%;
-  padding-bottom: 5%;
+  margin-bottom: 9%;
+  padding-bottom: 4%;
 }
 
 #story-nations {
