Fix cover photo placing

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body {
   background: url('https://s3-us-west-2.amazonaws.com/omar-one/omarcodex-cover-plain-1.jpg');
   background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
 }
 
 body a {
   color: #009ef9;
-  text-shadow: 1px 1px 2px white;
+  text-shadow: 2px 2px 9px white;
 }
